# purchase-order-microservice

./: README.md  docker-compose.yml  pyproject.toml
.github/workflows/: workflowTestingAndDeploy.yaml
purchase_order_microservice/: app.py
purchase_order_microservice/data/interfaces/: order_repository_interface.py
purchase_order_microservice/data/use_cases/: order_register.py  order_register_test.py
purchase_order_microservice/domain/models/: order.py  product.py
purchase_order_microservice/domain/use_cases/: order_register_interface.py
purchase_order_microservice/infra/database/mongo/repositories/: order_repository.py  order_repository_test.py
purchase_order_microservice/infra/database/mongo/settings/: connection.py  connection_test.py
