[tool.poetry]
name = "purchase-order-microservice"
version = "0.1.0"
description = ""
authors = ["Maxson Almeida <maxsonferovante@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.8.2"
fastapi = "^0.112.1"
sqlalchemy = "^2.0.32"
redis = "^5.0.8"
pymongo = "^4.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
